Added driver_report.pl, coverage_report.pl, and valgrind_report.pl to automate testing of driver compilation, test code coverage (gcov) and memory leaks (valgrind).
Fixed several problems that these scripts detected.

"make dcheck" now runs all three, plus unit tests, and generates one
unified report in testsuite/dcheck.report.

xref J1/12-13


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@155 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -620,9 +620,9 @@ aren't. Additionally, if the caller provides a non-\ccode{NULL}
 message buffer \ccode{errbuf}, on failure, an informative message
 describing the reason for the failure is formatted and left in
 \ccode{errbuf}. If the caller provides this message buffer, it must
-allocate it for at least \ccode{p7_ERRBUFSIZE} characters.
+allocate it for at least \ccode{p7\_ERRBUFSIZE} characters.
 
-The intent of a \ccode{_Validate()} call is to detect problems as
+The intent of a \ccode{\_Validate()} call is to detect problems as
 normal errors, so they may be handled gracefully or even silently, if
 that's what the caller wants to do. (Throwing exceptions instead would
 give the caller no flexibility in dealing with failed validations.)
