--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -67,8 +67,8 @@
 \input{autotext/esl_dirichlet_functions}
 
 \newpage
-\section{\eslmod{dmatrix}: linear algebra for 2D double matrices}
-%\input{../esl_dmatrix}
+\section{\eslmod{dmatrix}: 2D matrices and linear algebra}
+\input{../esl_dmatrix}
 \subsection{Functions in the dmatrix module}
 \input{autotext/esl_dmatrix_functions}
 
