ratematrix module added: adapted from ratematrix.[ch] paml module added: adapted from bioparse_paml.[ch] wag.dat added to formats/ dir upgraded codestyle.tex to an embryonic "Developer's Guide" chapter added some convenience functions to dmatrix (Min, Max, MinMax, Sum) added GSL Morph and Demorph interoperability in dmatrix; WITH_LIBGSL flag configure.ac has --with-gsl option (will expand later to include atlas, blas, lapack?) Working on matrix exponentiation (dmx_Exp) and eigensystems (dmx_Diagonalize), and very unhappy with it all.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@158 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -14,8 +14,9 @@
 \usepackage[pdftex]{graphicx}
 \usepackage[backref,colorlinks]{hyperref}
 
-
 \input{macros}
+
+\setcounter{secnumdepth}{1}
 
 \begin{document}
 
@@ -259,13 +260,8 @@
 \input{format_wuss.tex}
 
 
-
 \newpage
-\chapter{Appendix: design and construction notes}
-\input{doctricks}
-
-\newpage
-\chapter{Appendix: coding style}
+\chapter{Developer's guide}
 \input{codestyle}
 
 
