a little more documentation to the rootfinder; thinking about the right API for the Create() functions.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@163 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -116,6 +116,12 @@
 \input{autotext/esl_regexp_functions}
 
 \newpage
+\section{\eslmod{rootfinder}: finding roots of equations}
+\input{../esl_rootfinder}
+\subsection{Functions in the rootfinder module}
+\input{autotext/esl_rootfinder_functions}
+
+\newpage
 \section{\eslmod{sqio}: i/o of unaligned sequence files}
 \input{../esl_sqio}
 \subsection{Functions in the sqio module}
