--- a/esl_minimizer.tex
+++ b/esl_minimizer.tex
@@ -4,7 +4,7 @@
 \subsection{The minimizer API}
 
 The \eslmod{minimizer} API has just one function:
-\ccode{esl_min_ConjugateGradientDescent()}.
+\ccode{esl\_min\_ConjugateGradientDescent()}.
 
 \subsection{Example of using the minimizer API}
 
