Don't use variable names that are C++ reserved keywords. Changed random and easel so they don't use "new" or "template" as variable names.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@174 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_gumbel.tex
+++ b/esl_gumbel.tex
@@ -313,8 +313,12 @@ max error in $\hat{\lambda}$  & 36\%&   9\% &    2\% &  0.8\%  \\ \hline
 \end{tabular}
 \end{center}
 
+This is in accord with theoretical expectation. The distribution of
+\frac{\lambda}{\hat{\lambda}} is approximately normal with mean 1 and
+standard error \frac{0.78}{\sqrt{N}} \citep{Lawless82,Altschul01}. 
 
-
+% Altschul says \frac{\hat{\lambda}}{\lambda}, actually, but I believe
+% that's wrong. xref J1/46.
 
 
 \subsubsection{Maximum likelihood fitting to censored data}
