--- a/esl_exponential.tex
+++ b/esl_exponential.tex
@@ -31,9 +31,9 @@ distributed on $(0,1]$, $1-R$ is uniformly distributed on $[0,1)$:
 
 \subsection{Maximum likelihood fitting}
 
-The maximum likelihood estimate \hat{\lambda} is \frac{1}{\sum_i
-x_i}. The distribution of \frac{\lambda}{\hat{\lambda}} is
-approximately normal with mean 1 and standard error \frac{1}{\sqrt{N}}
+The maximum likelihood estimate $\hat{\lambda}$ is $\frac{1}{\sum_i
+x_i}$. The distribution of $\frac{\lambda}{\hat{\lambda}}$ is
+approximately normal with mean 1 and standard error $\frac{1}{\sqrt{N}}$
 \citep{Lawless82}.
 
 % xref J1/p49 for derivation of standard error.
