--- a/esl_gumbel.tex
+++ b/esl_gumbel.tex
@@ -314,8 +314,8 @@ max error in $\hat{\lambda}$  & 36\%&   9\% &    2\% &  0.8\%  \\ \hline
 \end{center}
 
 This is in accord with theoretical expectation. The distribution of
-\frac{\lambda}{\hat{\lambda}} is approximately normal with mean 1 and
-standard error \frac{0.78}{\sqrt{N}} \citep{Lawless82,Altschul01}. 
+$\frac{\lambda}{\hat{\lambda}}$ is approximately normal with mean 1 and
+standard error $\frac{0.78}{\sqrt{N}}$ \citep{Lawless82,Altschul01}. 
 
 % Altschul says \frac{\hat{\lambda}}{\lambda}, actually, but I believe
 % that's wrong. xref J1/46.
