--- a/esl_histogram.tex
+++ b/esl_histogram.tex
@@ -1,39 +1,65 @@
 
-The \eslmod{esl\_histogram} module is for collecting scores, fitting
+The \eslmod{histogram} module is for collecting scores, fitting
 them to expected distributions, and displaying them.
 
-\subsection{Overview of the histogram API}
+The histogram automatically reallocates its bins as data points
+arrive, so the caller only needs to provide some initial guidance
+about bin size and ``phase'' (offset of the bins relative to the real
+number line).  It accumulates counts in 64-bit unsigned integers, so
+it can handle over $10^19$ total counts.  Optionally (and provided
+that the caller knows it has enough memory to support this), a
+``full'' histogram can be created and used to collect a sorted vector
+of raw (unbinned) values.
 
-\vspace{1em}
-\begin{tabular}{ll}  \hline
-   \multicolumn{2}{c}{\textbf{Collecting data in an \ccode{ESL\_HISTOGRAM}}}\\
-\ccode{esl\_histogram\_Create()}       & Create a new \ccode{ESL\_HISTOGRAM}. \\
-\ccode{esl\_histogram\_CreateFull()}   & A \ccode{ESL\_HISTOGRAM} to keep all data samples   \\
-\ccode{esl\_histogram\_Destroy()}      & Frees a \ccode{ESL\_HISTOGRAM}.\\
-\ccode{esl\_histogram\_Add()}          & Add a sample to the histogram. \\
-   \multicolumn{2}{c}{\textbf{Declarations about binned data, before fitting}}\\
-\ccode{esl\_histogram\_DeclareCensoring()}  & Collected data are left-censored.\\
-\ccode{esl\_histogram\_DeclareRounding()}   & Samples are no more accurate than bins.\\
-\ccode{esl\_histogram\_SetTail()}           & Only tail $>$ some threshold is ``observed''.\\
-\ccode{esl\_histogram\_SetTailByMass()}     & Only right tail mass is ``observed''.\\
-   \multicolumn{2}{c}{\textbf{Accessing raw data samples}}\\
-\ccode{esl\_histogram\_GetRank()}      & Retrieve a high score.\\
-\ccode{esl\_histogram\_GetData()}      & Retrieve all raw scores.\\
-\ccode{esl\_histogram\_GetTail()}      & Retrieve raw scores above some threshold.\\
-\ccode{esl\_histogram\_GetTailByMass()}& Retrieve raw scores in right tail mass.\\
-   \multicolumn{2}{c}{\textbf{Setting expected counts}}\\
-\ccode{esl\_histogram\_SetExpect()}       & Set expected counts for complete distribution.\\
-\ccode{esl\_histogram\_SetExpectedTail()} & Set expected counts for right tail.\\
-   \multicolumn{2}{c}{\textbf{Output}}\\
-\ccode{esl\_histogram\_Print()}        & Print a ``pretty'' ASCII histogram. \\
-\ccode{esl\_histogram\_Plot()}         & Output a histogram in xmgrace XY format. \\
-\ccode{esl\_histogram\_PlotSurvival()} & Output $P(X>x)$ in xmgrace XY format. \\
-\ccode{esl\_histogram\_PlotQQ()}       & Output a Q-Q plot in xmgrace XY format. \\
-   \multicolumn{2}{c}{\textbf{Goodness of fit testing}}\\
-\ccode{esl\_histogram\_Goodness()}     & Evaluate fit between observed, expected.\\
+Various different ways of fitting histogram data to different sorts of
+expected distributions are supported, with interfaces to all of
+Easel's statistical distribution modules. Data fitting is oriented
+toward the case where the values are scores, with high scores being of
+the most interest; for instance, routines for obtaining and fitting
+the right (high-scoring) tail are provided, but not for the left tail.
+
+Several of the output functions output data as XY data files suitable
+for input into the popular and freely available \prog{xmgrace}
+graphing program [\url{http://plasma-gate.weizmann.ac.il/Grace/}].
+
+The API for the \eslmod{histogram} module is summarized in
+Table~\ref{tbl:histogram_api}.
+
+\begin{table}[hbp]
+\begin{center}
+{\small
+\begin{tabular}{|ll|}\hline
+    \apisubhead{Collecting data in an \ccode{ESL\_HISTOGRAM}}\\
+\hyperlink{func:esl_histogram_Create()}{\ccode{esl\_histogram\_Create()}} & Create a new \ccode{ESL\_HISTOGRAM}.\\
+\hyperlink{func:esl_histogram_CreateFull()}{\ccode{esl\_histogram\_CreateFull()}} & A \ccode{ESL\_HISTOGRAM} to keep all data samples.\\
+\hyperlink{func:esl_histogram_Destroy()}{\ccode{esl\_histogram\_Destroy()}} & Frees a \ccode{ESL\_HISTOGRAM}.\\
+\hyperlink{func:esl_histogram_Add()}{\ccode{esl\_histogram\_Add()}} & Add a sample to the histogram.\\
+    \apisubhead{Declarations about binned data, before fitting}\\
+\hyperlink{func:esl_histogram_DeclareCensoring()}{\ccode{esl\_histogram\_DeclareCensoring()}} & Collected data were left-censored.\\
+\hyperlink{func:esl_histogram_DeclareRounding()}{\ccode{esl\_histogram\_DeclareRounding()}} & Declare collected data were no more accurate than bins.\\
+\hyperlink{func:esl_histogram_SetTail()}{\ccode{esl\_histogram\_SetTail()}} & Declare only tail $>$ some threshold is considered "observed".\\
+\hyperlink{func:esl_histogram_SetTailByMass()}{\ccode{esl\_histogram\_SetTailByMass()}} & Declare only right tail mass is considered "observed".\\
+    \apisubhead{Accessing raw data samples}\\
+\hyperlink{func:esl_histogram_GetRank()}{\ccode{esl\_histogram\_GetRank()}} & Retrieve n'th high score.\\
+\hyperlink{func:esl_histogram_GetData()}{\ccode{esl\_histogram\_GetData()}} & Retrieve vector of all raw scores.\\
+\hyperlink{func:esl_histogram_GetTail()}{\ccode{esl\_histogram\_GetTail()}} & Retrieve all raw scores above some threshold.\\
+\hyperlink{func:esl_histogram_GetTailByMass()}{\ccode{esl\_histogram\_GetTailByMass()}} & Retrieve all raw scores in right tail mass.\\
+    \apisubhead{Setting expected counts}\\
+\hyperlink{func:esl_histogram_SetExpect()}{\ccode{esl\_histogram\_SetExpect()}} & Set expected counts for complete distribution.\\
+\hyperlink{func:esl_histogram_SetExpectedTail()}{\ccode{esl\_histogram\_SetExpectedTail()}} & Set expected counts for right tail.\\
+    \apisubhead{Output}\\
+\hyperlink{func:esl_histogram_Print()}{\ccode{esl\_histogram\_Print()}} & Print a "pretty" ASCII histogram.\\
+\hyperlink{func:esl_histogram_Plot()}{\ccode{esl\_histogram\_Plot()}} & Output a histogram in xmgrace XY format.\\
+\hyperlink{func:esl_histogram_PlotSurvival()}{\ccode{esl\_histogram\_PlotSurvival()}} & Output $P(X>x)$ in xmgrace XY format.\\
+\hyperlink{func:esl_histogram_PlotQQ()}{\ccode{esl\_histogram\_PlotQQ()}} & Output a Q-Q plot in xmgrace XY format.\\
+\hyperlink{func:esl_histogram_Goodness()}{\ccode{esl\_histogram\_Goodness()}} & Evaluate fit between observed, expected. \\
 \hline
 \end{tabular}
-\vspace{1em}
+}
+\end{center}
+\caption{The \eslmod{histogram} API.}
+\label{tbl:histogram_api}
+\end{table}
 
 \subsection{Example of using the histogram API}
 
@@ -95,24 +121,31 @@ $-10.1 < x \leq -9.6$.
 
 Aside from that, the initial range is only a suggestion. You can add
 any real-valued $x$ to the histogram. The histogram will silently
-reallocate itself to a wider range as needed. This is only limited by
-the amount of RAM you have for bins.
+reallocate itself to a wider range as needed.  The ability of a
+histogram to store data is effectively unlimited. Up to $2^{64}-1$
+(more than $10^{19}$) counts can be collected. The histogram requires 16
+bytes of storage per bin, and the number of bins it allocates scales
+as $x_{\mbox{max}} - x_{\mbox{min}} / w$.
 
+\subsection{Optional collection of raw data values: full histograms}
 
-\subsection{Optional collection of raw data values}
-
-A histogram would normally store only binned counts, so it can
+Normally a histogram would store only binned counts, so it can
 efficiently summarize even very large numbers of samples.
 
 In some cases it is useful to keep a list of the raw data values --
-for instance, for accurate parameter fitting to expected
-distributions. This is done by creating a ``full'' histogram with
+for instance, for more accurate parameter fitting to expected
+distributions. This can be done by creating a ``full'' histogram with
 \ccode{esl\_histogram\_CreateFull()} instead of
 \ccode{esl\_histogram\_Create()}. (The example code above did this,
-because it also did parameter fitting.) After data have been collected
-in a full histogram, individual raw values or pointers to sorted
-arrays of raw values can be retrieved using the
+because it did parameter fitting to the raw data.) After data have
+been collected in a full histogram, individual raw values or pointers
+to sorted arrays of raw values can be retrieved using the
 \ccode{esl\_histogram\_Get*} functions.
+
+A full histogram may require much more memory: about 4 bytes per data
+point. You may not want to use full histograms if your problem
+involves collecting many ($> 10^9$, say) data points.
+
 
 
 \subsection{Different parameter fitting scenarios}
@@ -150,12 +183,15 @@ designed to deal with four other cases:
       in the observed data. (This case is what is actually meant by
       left-censored data.)
 
-\item The high-scoring right tail of the collected data are fit as
-      \emph{binned} counts (not raw sample values) to a distribution
-      that describes the tail, such as an exponential. This case
-      becomes useful when the raw data values have limited precision
-      (because of rounding, for example), which can cause numerical
-      problems with parameter fitting to tails.
+\item The high-scoring right tail of the collected data are fit as the
+      \emph{binned} counts in the histogram (not raw sample values) to
+      a distribution that describes the tail, such as an
+      exponential. This case becomes useful when the raw data values
+      have limited precision (because of rounding, for example), which
+      can cause numerical problems with parameter fitting to tails.
+      Another case where this is useful is when there are so many data
+      points that the data must be binned just as a matter of
+      practicality (not enough memory to hold a full histogram).
 \end{enumerate}
 
 A variety of other situations can be dealt with by using different
@@ -228,8 +264,9 @@ singularities ($P(X=x) \rightarrow \infty$) at their origin. In such a
 case, a fit to binned data may be superior, especially if you can
 match the histogram's bins to the rounding procedure that was used.
 
-The following code shows an example of fitting for samples rounded up
-to the nearest integer:
+The following code shows an example of fitting for samples that were
+already rounded up to the nearest integer before adding them to the
+histogram:
 
 \input{cexcerpts/histogram_example5}
 
